--- a/visualize_result/summary_prompts.ipynb
+++ b/visualize_result/summary_prompts.ipynb
@@ -85,8 +85,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-15T23:56:26.999105Z",
-     "start_time": "2024-10-15T23:56:26.920158Z"
+     "end_time": "2024-10-16T00:01:27.776519Z",
+     "start_time": "2024-10-16T00:01:27.694386Z"
     }
    },
    "cell_type": "code",
@@ -178,7 +178,8 @@
     "\n",
     "        reward_dir = join(exp_list, REWARD_FUNCTION_DIR, REWARD_FUNCTION_SUBDIR_FORMAT.format(iteration=iter_num))\n",
     "        reward_trials = glob(join(reward_dir, '*.json'))\n",
-    "        trial_nums = list(map(_get_trial_number, reward_trials))\n",
+    "        trial_nums = sorted(list(map(_get_trial_number, reward_trials)))\n",
+    "        \n",
     "\n",
     "        for trial_num in trial_nums:\n",
     "            trial_json_path = join(reward_dir, TRIAL_FILENAME_FORMAT.format(iteration=iter_num, trial=trial_num))\n",
@@ -240,7 +241,7 @@
    ],
    "id": "bd9458c05573682d",
    "outputs": [],
-   "execution_count": 155
+   "execution_count": 157
   },
   {
    "metadata": {},
