--- a/visualize_result/summary_prompts.ipynb
+++ b/visualize_result/summary_prompts.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:30:19.157496Z",
-     "start_time": "2024-10-29T17:30:19.057835Z"
+     "end_time": "2024-10-30T15:57:09.186617Z",
+     "start_time": "2024-10-30T15:57:09.181453Z"
     }
    },
    "cell_type": "code",
@@ -22,13 +22,13 @@
    ],
    "id": "86da4c0731addffd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:30:19.184127Z",
-     "start_time": "2024-10-29T17:30:19.172880Z"
+     "end_time": "2024-10-30T15:57:09.216903Z",
+     "start_time": "2024-10-30T15:57:09.214018Z"
     }
    },
    "cell_type": "code",
@@ -46,13 +46,13 @@
    ],
    "id": "12489361ec90d6d7",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:30:19.275892Z",
-     "start_time": "2024-10-29T17:30:19.267149Z"
+     "end_time": "2024-10-30T15:57:09.226525Z",
+     "start_time": "2024-10-30T15:57:09.222666Z"
     }
    },
    "cell_type": "code",
@@ -77,6 +77,7 @@
        " 'src/pe-io_it-1_fit-vit_exp-def_chr-A_s-0',\n",
        " 'src/pe-cot_it-5_fit-vit_exp-def_chr-M_s-2',\n",
        " 'src/pe-io_it-1_fit-vit_exp-def_chr-C_s-0',\n",
+       " 'src/pe-cot_it-5_fit-vit_exp-def_chr-MakeXlevel95_s-4',\n",
        " 'src/pe-tot_it-6_fit-vit_exp-def_chr-F_s-0',\n",
        " 'src/pe-io_it-1_fit-vit_exp-def_chr-N_s-0',\n",
        " 'src/pe-tot_it-6_fit-vit_exp-def_chr-D_s-0',\n",
@@ -86,21 +87,22 @@
        " 'src/pe-cot_it-5_fit-vit_exp-def_chr-D_s-2',\n",
        " 'src/pe-tot_it-6_fit-vit_exp-def_chr-C_s-0',\n",
        " 'src/pe-cot_it-5_fit-vit_exp-def_chr-N_s-1',\n",
+       " 'src/pe-cot_it-5_fit-vit_exp-def_chr-aXlevel20_s-0',\n",
        " 'src/pe-cot_it-5_fit-vit_exp-def_chr-M_s-1']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:30:19.356150Z",
-     "start_time": "2024-10-29T17:30:19.353881Z"
+     "end_time": "2024-10-30T15:57:09.242526Z",
+     "start_time": "2024-10-30T15:57:09.240154Z"
     }
    },
    "cell_type": "code",
@@ -117,13 +119,13 @@
    ],
    "id": "1f8d71b7ad2ad6ce",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:37:02.809462Z",
-     "start_time": "2024-10-29T17:37:02.101005Z"
+     "end_time": "2024-10-30T15:57:09.993778Z",
+     "start_time": "2024-10-30T15:57:09.247716Z"
     }
    },
    "cell_type": "code",
@@ -284,84 +286,124 @@
    ],
    "id": "bd9458c05573682d",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-29T17:37:06.232151Z",
-     "start_time": "2024-10-29T17:37:06.229109Z"
+     "end_time": "2024-10-30T15:57:10.001585Z",
+     "start_time": "2024-10-30T15:57:09.999391Z"
     }
    },
    "cell_type": "code",
    "source": "reward_trials = [f for f in reward_trials if not re.search(r'branch', f)]\n",
    "id": "111b0f8509facfd",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.010493Z",
+     "start_time": "2024-10-30T15:57:10.009062Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "f319ef2881ce666c"
+   "id": "f319ef2881ce666c",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.019697Z",
+     "start_time": "2024-10-30T15:57:10.018234Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "5524af94c54b32cb"
+   "id": "5524af94c54b32cb",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.035130Z",
+     "start_time": "2024-10-30T15:57:10.033921Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "95bde020cf52337a"
+   "id": "95bde020cf52337a",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.047774Z",
+     "start_time": "2024-10-30T15:57:10.046484Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "d67625403c5ee84a"
+   "id": "d67625403c5ee84a",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.061179Z",
+     "start_time": "2024-10-30T15:57:10.059885Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "a4661d230a0fdee4"
+   "id": "a4661d230a0fdee4",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.067382Z",
+     "start_time": "2024-10-30T15:57:10.066275Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "13fe35d19dd82a03"
+   "id": "13fe35d19dd82a03",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.078121Z",
+     "start_time": "2024-10-30T15:57:10.076915Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "2a355fcf6a2bc781"
+   "id": "2a355fcf6a2bc781",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T15:57:10.088634Z",
+     "start_time": "2024-10-30T15:57:10.087386Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "59541f1dcadbddfe"
+   "id": "59541f1dcadbddfe",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
