--- a/visualize_result/scenario/exp_counter.ipynb
+++ b/visualize_result/scenario/exp_counter.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T03:22:17.148991Z",
-     "start_time": "2024-12-17T03:22:17.145706Z"
+     "end_time": "2024-12-26T00:18:28.163137Z",
+     "start_time": "2024-12-26T00:18:28.161588Z"
     }
    },
    "cell_type": "code",
@@ -15,13 +15,13 @@
    ],
    "id": "6e53bcc481c434b2",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T03:22:17.187325Z",
-     "start_time": "2024-12-17T03:22:17.163123Z"
+     "end_time": "2024-12-26T00:18:28.184608Z",
+     "start_time": "2024-12-26T00:18:28.168581Z"
     }
    },
    "cell_type": "code",
@@ -440,18 +440,18 @@
        "</div>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 38
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T03:22:17.220707Z",
-     "start_time": "2024-12-17T03:22:17.216858Z"
+     "end_time": "2024-12-26T00:18:28.262284Z",
+     "start_time": "2024-12-26T00:18:28.258501Z"
     }
    },
    "cell_type": "code",
@@ -461,13 +461,13 @@
    ],
    "id": "334d6bd3a2b651cf",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T03:25:04.003508Z",
-     "start_time": "2024-12-17T03:25:03.981670Z"
+     "end_time": "2024-12-26T00:18:28.300389Z",
+     "start_time": "2024-12-26T00:18:28.294024Z"
     }
    },
    "cell_type": "code",
@@ -508,29 +508,34 @@
        "Name: run_id, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "feedback_df = df[df['exp_name'] == 'feedback']\n",
-    "feedback_df.to_csv('feedback.csv')"
-   ],
-   "id": "be199416d1952d64"
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T03:37:13.241584Z",
-     "start_time": "2024-12-17T03:37:13.215695Z"
+     "end_time": "2024-12-26T00:18:28.342426Z",
+     "start_time": "2024-12-26T00:18:28.335128Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "feedback_df = df[df['exp_name'] == 'feedback']\n",
+    "feedback_df.to_csv('feedback.csv')"
+   ],
+   "id": "be199416d1952d64",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-26T00:18:28.387434Z",
+     "start_time": "2024-12-26T00:18:28.370053Z"
     }
    },
    "cell_type": "code",
@@ -540,7 +545,7 @@
    ],
    "id": "25071be62a5d13ac",
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 6
   }
  ],
  "metadata": {
