--- a/visualize_result/scenario/ablation_study.tex
+++ b/visualize_result/scenario/ablation_study.tex
@@ -1,21 +1,17 @@
 \begin{table*}[!t]
 \caption{Ablation study results for framework architecture, comparing accuracy across prompt engineering methods and scenarios.}
-\label{tab:result_pe}
-\begin{tabular}{p{1.5cm}p{1.5cm}|p{1.3cm}p{1.3cm}p{1.3cm}p{1.3cm}|p{1.3cm}p{1.3cm}p{1.3cm}p{1.3cm}}
+\label{tab:ablation_study}
+\begin{tabular}{p{2.2cm}|p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}|p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}}
 \toprule
- & LLM Model & \multicolumn{4}{c|}{\texttt{gpt-4o-2024-08-06}} & \multicolumn{4}{c}{\texttt{chatgpt-4o-latest} (Dec 2024)} \\
- &  & \textbf{Base} & \textbf{+SA} & \textbf{+FB} & \textbf{+FB, SA} & \textbf{Base} & \textbf{+SA} & \textbf{+FB} & \textbf{+FB, SA} \\
-Scenario & PE &  &  &  &  &  &  &  &  \\
+LLM ($\mathcal{M}$) & \multicolumn{4}{c|}{\texttt{gpt-4o-2024-08-06}} & \multicolumn{4}{c}{\texttt{llama3.2-90b-instruct}} \\
+ & Base & + SA & + FB & + FB \& SA & Base & + SA & + FB & + FB \& SA \\
+PE &  &  &  &  &  &  &  &  \\
 \midrule
-\multirow[t]{3}{*}{1} & CoT & 0.064 & 0.013 & 0.011 & 0.093 & 0.002 & 0.067 & 0.062 & 0.100 \\
- & ToT & 0.040 & 0.094 & 0.333 & 0.121 & 0.236 & 0.000 & 0.076 & 0.150 \\
- & GoT & 0.013 & 0.081 & 0.017 & 0.054 & 0.258 & 0.117 & 0.094 & 0.096 \\
+CoT & 0.033 & 0.010 & 0.156 & 0.117 & 0.300 & 0.298 & 0.239 & 0.472 \\
+ToT & 0.028 & 0.058 & 0.329 & 0.103 & 0.303 & 0.262 & 0.236 & 0.363 \\
+GoT & 0.033 & 0.067 & 0.076 & 0.111 & 0.149 & 0.308 & 0.307 & 0.383 \\
 \midrule
-\multirow[t]{3}{*}{2} & CoT & 0.002 & 0.007 & 0.300 & 0.140 & 0.409 & 0.124 & 0.327 & 0.349 \\
- & ToT & 0.014 & 0.000 & 0.324 & 0.073 & 0.393 & 0.311 & 0.140 & 0.420 \\
- & GoT & 0.059 & 0.054 & 0.156 & 0.168 & 0.649 & 0.314 & 0.464 & 0.400 \\
-\midrule
-\multicolumn{2}{c|}{\textbf{Mean}} & 0.032 & 0.042 & 0.190 & 0.108 & 0.325 & 0.155 & 0.194 & 0.253 \\
+\multicolumn{1}{c|}{\textbf{Mean}} & 0.031 & 0.045 & 0.187 & 0.110 & 0.251 & 0.289 & 0.260 & 0.406 \\
 \bottomrule
 \end{tabular}
 \end{table*}
