auxiliary_data_heatmap notebook

--- a/wandb_tools/continue_exp.ipynb
+++ b/wandb_tools/continue_exp.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:25.007603Z",
-     "start_time": "2024-12-27T04:31:25.002540Z"
+     "end_time": "2025-01-08T09:30:39.171980Z",
+     "start_time": "2025-01-08T09:30:38.731973Z"
     }
    },
    "cell_type": "code",
@@ -16,31 +16,31 @@
    ],
    "id": "d9f14382f5b686e0",
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:25.021956Z",
-     "start_time": "2024-12-27T04:31:25.013052Z"
+     "end_time": "2025-01-08T09:30:39.185058Z",
+     "start_time": "2025-01-08T09:30:39.178236Z"
     }
    },
    "cell_type": "code",
    "source": "api = wandb.Api(timeout=600)",
    "id": "e19d07b9b41e8296",
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:26.800538Z",
-     "start_time": "2024-12-27T04:31:25.034411Z"
+     "end_time": "2025-01-08T09:30:40.653351Z",
+     "start_time": "2025-01-08T09:30:39.215714Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "runs = api.runs(\"inchangbaek4907/scenario\")\n",
+    "runs = api.runs(\"inchangbaek4907/scenario-aux\")\n",
     "len(runs)"
    ],
    "id": "b8f538313e8e36b",
@@ -48,21 +48,21 @@
     {
      "data": {
       "text/plain": [
-       "213"
+       "55"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 39
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.677644Z",
-     "start_time": "2024-12-27T04:31:26.823189Z"
+     "end_time": "2025-01-08T09:30:41.042769Z",
+     "start_time": "2025-01-08T09:30:40.673114Z"
     }
    },
    "cell_type": "code",
@@ -75,25 +75,25 @@
     {
      "data": {
       "text/plain": [
-       "[<Run inchangbaek4907/scenario/re2wd1xx (finished)>,\n",
-       " <Run inchangbaek4907/scenario/h5m442q9 (finished)>,\n",
-       " <Run inchangbaek4907/scenario/ak7yr998 (finished)>,\n",
-       " <Run inchangbaek4907/scenario/mwu8l4yk (finished)>,\n",
-       " <Run inchangbaek4907/scenario/7ek9ue01 (finished)>]"
+       "[<Run inchangbaek4907/scenario-aux/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w0_chr-1_1_s-1 (finished)>,\n",
+       " <Run inchangbaek4907/scenario-aux/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w0_chr-2_1_s-1 (finished)>,\n",
+       " <Run inchangbaek4907/scenario-aux/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w0_chr-1_1_s-3 (finished)>,\n",
+       " <Run inchangbaek4907/scenario-aux/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w0_chr-2_1_s-6 (finished)>,\n",
+       " <Run inchangbaek4907/scenario-aux/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w0_chr-1_1_s-6 (finished)>]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.759095Z",
-     "start_time": "2024-12-27T04:31:29.756507Z"
+     "end_time": "2025-01-08T09:30:41.113710Z",
+     "start_time": "2025-01-08T09:30:41.110931Z"
     }
    },
    "cell_type": "code",
@@ -121,13 +121,13 @@
    ],
    "id": "59e1d1a01fc2cff3",
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.786698Z",
-     "start_time": "2024-12-27T04:31:29.778497Z"
+     "end_time": "2025-01-08T09:30:41.152963Z",
+     "start_time": "2025-01-08T09:30:41.128485Z"
     }
    },
    "cell_type": "code",
@@ -146,27 +146,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 213/213 [00:00<00:00, 114698.52it/s]\n"
+      "100%|██████████| 55/55 [00:00<00:00, 20801.33it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0"
+       "5"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 42
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.870540Z",
-     "start_time": "2024-12-27T04:31:29.865345Z"
+     "end_time": "2025-01-08T09:30:41.291269Z",
+     "start_time": "2025-01-08T09:30:41.271898Z"
     }
    },
    "cell_type": "code",
@@ -184,15 +184,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 67650.06it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "   DEBUG activation bypass_feedback_path  NUM_MINIBATCHES  total_iterations  \\\n",
+       "0   True       relu                 None                4                 6   \n",
+       "1   True       relu                 None                4                 6   \n",
+       "2   True       relu                 None                4                 6   \n",
+       "3   True       relu                 None                4                 6   \n",
+       "4   True       relu                 None                4                 6   \n",
+       "\n",
+       "   render_freq  max_board_scans  eval_randomize_map_shape  ANNEAL_LR  \\\n",
+       "0           40                3                     False      False   \n",
+       "1           40                3                     False      False   \n",
+       "2           40                3                     False      False   \n",
+       "3           40                3                     False      False   \n",
+       "4           40                3                     False      False   \n",
+       "\n",
+       "   n_codegen_trials  ... n_samples  NUM_UPDATES  \\\n",
+       "0                 3  ...        30         None   \n",
+       "1                 3  ...        30         None   \n",
+       "2                 3  ...        30         None   \n",
+       "3                 3  ...        30         None   \n",
+       "4                 3  ...        30         None   \n",
+       "\n",
+       "                                             exp_dir  seed  VF_COEF  \\\n",
+       "0  saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...     1      0.5   \n",
+       "1  saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...     2      0.5   \n",
+       "2  saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b0w...     4      0.5   \n",
+       "3  saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...     6      0.5   \n",
+       "4  saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b2w...     6      0.5   \n",
+       "\n",
+       "   randomize_map_shape  n_eval_envs n_gpus  n_agents  hidden_dims  \n",
+       "0                False            1      1         1    [64, 256]  \n",
+       "1                False            1      1         1    [64, 256]  \n",
+       "2                False            1      1         1    [64, 256]  \n",
+       "3                False            1      1         1    [64, 256]  \n",
+       "4                False            1      1         1    [64, 256]  \n",
+       "\n",
+       "[5 rows x 95 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -213,26 +246,168 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>DEBUG</th>\n",
+       "      <th>activation</th>\n",
+       "      <th>bypass_feedback_path</th>\n",
+       "      <th>NUM_MINIBATCHES</th>\n",
+       "      <th>total_iterations</th>\n",
+       "      <th>render_freq</th>\n",
+       "      <th>max_board_scans</th>\n",
+       "      <th>eval_randomize_map_shape</th>\n",
+       "      <th>ANNEAL_LR</th>\n",
+       "      <th>n_codegen_trials</th>\n",
+       "      <th>...</th>\n",
+       "      <th>n_samples</th>\n",
+       "      <th>NUM_UPDATES</th>\n",
+       "      <th>exp_dir</th>\n",
+       "      <th>seed</th>\n",
+       "      <th>VF_COEF</th>\n",
+       "      <th>randomize_map_shape</th>\n",
+       "      <th>n_eval_envs</th>\n",
+       "      <th>n_gpus</th>\n",
+       "      <th>n_agents</th>\n",
+       "      <th>hidden_dims</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>None</td>\n",
+       "      <td>saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[64, 256]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>None</td>\n",
+       "      <td>saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[64, 256]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>None</td>\n",
+       "      <td>saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b0w...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[64, 256]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>True</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>None</td>\n",
+       "      <td>saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b1w...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[64, 256]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>relu</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>None</td>\n",
+       "      <td>saves/pe-got_it-6_fit-hr_exp-aux_t-sce_aux-b2w...</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[64, 256]</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 95 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 43
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.915454Z",
-     "start_time": "2024-12-27T04:31:29.910073Z"
+     "end_time": "2025-01-08T09:32:17.969024Z",
+     "start_time": "2025-01-08T09:32:17.959362Z"
     }
    },
    "cell_type": "code",
@@ -256,6 +431,8 @@
     "    n_self_alignment = config['n_self_alignment']\n",
     "    evaluator = config['evaluator']\n",
     "    pe = config['pe']\n",
+    "    n_aux_worst = config['n_aux_worst']\n",
+    "    n_aux_best = config['n_aux_best']\n",
     "    \n",
     "    # if nan\n",
     "    if pd.isna(n_self_alignment):\n",
@@ -263,7 +440,7 @@
     "    n_self_alignment = int(n_self_alignment)\n",
     "    \n",
     "\n",
-    "    command = f\"bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario task=scenario overwrite=True pe={pe} exp_name={exp_name} gpt_model={gpt_model} total_iterations={total_iterations} seed={seed} evaluator={evaluator} target_character={target_character} n_self_alignment={n_self_alignment}\"\n",
+    "    command = f\"bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe={pe} exp_name={exp_name} gpt_model={gpt_model} total_iterations={total_iterations} seed={seed} evaluator={evaluator} target_character={target_character} n_self_alignment={n_self_alignment} wandb_resume=must n_aux_worst={n_aux_worst} n_aux_best={n_aux_best}\"\n",
     "    commands.append(command)\n",
     "\n",
     "commands"
@@ -273,21 +450,25 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=1 evaluator=hr target_character=1 n_self_alignment=0 wandb_resume=must n_aux_worst=0 n_aux_best=1',\n",
+       " 'bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=2 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=0 n_aux_best=1',\n",
+       " 'bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=4 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=0',\n",
+       " 'bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=6 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=1',\n",
+       " 'bash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=6 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=2']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 44
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-27T04:31:29.975779Z",
-     "start_time": "2024-12-27T04:31:29.969709Z"
+     "end_time": "2025-01-08T09:32:24.055834Z",
+     "start_time": "2025-01-08T09:32:24.052718Z"
     }
    },
    "cell_type": "code",
@@ -303,13 +484,13 @@
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ],
-      "text/markdown": "```bash\n"
+      "text/markdown": "```bash\nbash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=1 evaluator=hr target_character=1 n_self_alignment=0 wandb_resume=must n_aux_worst=0 n_aux_best=1 \nbash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=2 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=0 n_aux_best=1 \nbash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=4 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=0 \nbash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=6 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=1 \nbash sbatch_gpu.sh experiment.py n_envs=600 wandb_project=scenario-aux task=scenario overwrite=False pe=got exp_name=aux gpt_model=gpt-4o total_iterations=6 seed=6 evaluator=hr target_character=2 n_self_alignment=0 wandb_resume=must n_aux_worst=1 n_aux_best=2"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 45
+   "execution_count": 17
   }
  ],
  "metadata": {
